test/tests/stages/15_arrays_and_pointer_arithmetic/valid/extra_credit/postfix_prefix_precedence.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: idx
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 3
            None: 
          None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[11]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  CCompoundInit: 
                    List[5]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 3
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 4
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 5
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 5
                    Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CBinary: 
                      CAdd: 
                      CVar: 
                        TIdentifier: arr
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: result
                  CSingleInit: 
                    CAssignment: 
                      CPrefix: 
                      None: 
                      CBinary: 
                        CAdd: 
                        CSubscript: 
                          CAssignment: 
                            CPostfix: 
                            None: 
                            CBinary: 
                              CSubtract: 
                              CVar: 
                                TIdentifier: ptr
                                None: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 1
                                None: 
                              None: 
                            None: 
                          CVar: 
                            TIdentifier: idx
                            None: 
                          None: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CVar: 
                    TIdentifier: result
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 6
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1