test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/extra_credit/postfix_incr_nested_array.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: arr
                  CCompoundInit: 
                    List[2]: 
                      CCompoundInit: 
                        List[3]: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                            None: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
                            None: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 3
                              None: 
                            None: 
                        None: 
                      CCompoundInit: 
                        List[3]: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 4
                              None: 
                            None: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 5
                              None: 
                            None: 
                          CSingleInit: 
                            CConstant: 
                              CConstInt: 
                                TInt: 6
                              None: 
                            None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 2
                    Array: 
                      TLong: 3
                      Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  CPostfix: 
                  None: 
                  CBinary: 
                    CAdd: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: arr
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 2
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
